<resources>
    <string name="app_name">Instagram</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="post_details">Post Details</string>
    <string name="details">Details</string>
    <string name="username">\@username</string>
    <string name="follow">Follow</string>
    <string name="user_image">User Image</string>
    <string name="post_image">Post Image</string>
    <string name="favourite_icon">Favourite Icon</string>
    <string name="comment_icon">Comment Icon</string>
    <string name="share_icon">Share Icon</string>
    <string name="save_icon">Save Icon</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="_100">100</string>
    <string name="publish_data">Publish Data</string>
    <string name="name">Name</string>
    <string name="following">Following</string>
    <string name="bookmark_icon">Bookmark Icon</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="add_story">Add Story</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="image_icon">Image Icon</string>
    <string name="what_s_on_your_mind">What\'s on your Mind?</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="_556">556</string>
    <string name="_10_7k">10.7k</string>
    <string name="_1_5k">1.5k</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email">Email</string>
    <string name="cell">Cell</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="settings">Settings</string>
    <string name="recent_posts">Recent Posts</string>
    <string name="menu">Menu</string>
    <string name="add_post">Add Post</string>
    <string name="saved">Saved</string>
    <string name="your_activity">Your Activity</string>
    <string name="close_friends">Close Friends</string>
    <string name="insights">Insights</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_a_comment">Add a comment..</string>
    <string name="not_found">Not Found</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="try_again">Try Again</string>

    <string-array name="share_visibility">
        <item>Public</item>
        <item>Friend</item>
        <item>Only Me</item>
    </string-array>


</resources>