<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/post"
        android:enabled="true"
        android:icon="@drawable/ic_add_post"
        android:title="@string/post" />
    <item
        android:id="@+id/favourite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favourite" />
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>