<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="photo"
            type="com.mahfuznow.instagram.model.Photo" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/myCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/user_image"
                        android:scaleType="centerCrop"
                        android:src="@color/grey_trans_50" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/username"
                    android:text="@{ `@` + photo.photographer_username}"
                    android:textStyle="bold" />

                <Button
                    style="@style/Button.Round.Outline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow"
                    android:textSize="12sp" />
            </LinearLayout>

            <ImageView
                loadImage="@{photo.photo_image_url + `?w=500`}"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/post_image"
                android:scaleType="fitCenter"
                android:src="@color/grey_trans_50" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/favourite_icon"
                    android:src="@drawable/ic_favorite" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/comment_icon"
                    android:src="@drawable/ic_comment" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/share_icon"
                    android:src="@drawable/ic_share" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/save_icon"
                    android:src="@drawable/ic_bookmark_border" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>