<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp">

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/user_image"
                    android:src="@drawable/ic_add_circle_outline" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:hint="@string/name"
            android:text="@string/add_story" />
    </LinearLayout>
</layout>
