<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="post"
            type="com.mahfuznow.instagram.data.model.PostsData.Data" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/myCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        loadImage="@{post.owner.picture}"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/user_image"
                        android:scaleType="centerCrop"
                        android:src="@color/grey_trans_50" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:text="@{ `@` + post.owner.firstName}"
                        android:textStyle="bold" />

                    <TextView
                        loadFormattedDateTime="@{post.publishDate}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/publish_data"
                        android:textSize="12sp" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:checked="false"
                    android:padding="10dp"
                    android:text="@string/follow"
                    android:textAllCaps="true"
                    android:textColor="@drawable/checkbox_follow"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/image"
                loadImage="@{post.image}"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/post_image"
                android:scaleType="fitCenter"
                android:src="@color/grey_trans_50" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/favourite"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/checkbox_favourite"
                    android:button="@null"
                    android:checked="false"
                    android:stateListAnimator="@animator/scale" />

                <TextView
                    android:id="@+id/likeCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/_100"
                    android:text="@{String.valueOf(post.likes)}" />

                <ImageButton
                    android:id="@+id/comment"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_comment"
                    android:contentDescription="@string/comment_icon" />

                <ImageButton
                    android:id="@+id/share"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_share"
                    android:contentDescription="@string/share_icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/bookmark"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/checkbox_bookmark"
                    android:button="@null"
                    android:checked="false"
                    android:contentDescription="@string/bookmark_icon"
                    android:stateListAnimator="@animator/scale" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>