<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userDetails"
            type="com.mahfuznow.instagram.data.model.UserDetails" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.view.ProfileFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="8dp"
                        app:cardCornerRadius="50dp">

                        <ImageView
                            loadImage="@{userDetails.picture}"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:contentDescription="@string/user_image"
                            android:src="@color/grey_trans_50" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="30dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_556"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/posts" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="30dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_10_7k"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_1_5k"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/name"
                            android:text="@string/name" />

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:text="@{userDetails.title + ` ` + userDetails.firstName + ` ` + userDetails.lastName}"
                            android:textSize="18sp" />

                        <View style="@style/Divider.Horizontal" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/gender"
                            android:text="@string/gender" />

                        <TextView
                            android:id="@+id/gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/gender"
                            android:text="@{userDetails.gender}"
                            android:textSize="18sp" />

                        <View style="@style/Divider.Horizontal" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/dob"
                            android:text="@string/date_of_birth" />

                        <TextView
                            android:id="@+id/dob"
                            loadFormattedDateTime="@{userDetails.dateOfBirth}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/date_of_birth"
                            android:textSize="18sp" />

                        <View style="@style/Divider.Horizontal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/email"
                            android:text="@string/email" />

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:text="@{userDetails.email}"
                            android:textSize="18sp" />

                        <View style="@style/Divider.Horizontal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/phone"
                            android:text="@string/phone" />

                        <TextView
                            android:id="@+id/phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone"
                            android:text="@{userDetails.phone}"
                            android:textSize="18sp" />

                        <View style="@style/Divider.Horizontal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/address"
                            android:text="@string/address" />

                        <TextView
                            android:id="@+id/address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/address"
                            android:text="@{userDetails.location.city + ` , `+ userDetails.location.state + ` , ` + userDetails.location.country}"
                            android:textSize="18sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/recent_posts"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="3"
                        tools:itemCount="15"
                        tools:listitem="@layout/item_post_profile" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>